<package format="2">
  <name>cram_lynxmotion_al5d_demo</name>
  <version>0.1.0</version>
  <description>Demo code for assembly objects with Lynxmotion AL5D description</description>
  <author>Vinny Adjibi</author>
  <maintainer email="vadjibi@andrew.cmu.edu">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/cognitive-robotics-course/cram_lynxmotion_al5d</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslisp_utilities</depend>

  <depend>cl_transforms</depend>
  <depend>cl_transforms_stamped</depend>
  <depend>cl_tf</depend>
  <depend>cl_tf2</depend>
  <depend>cram_tf</depend>

  <depend>cram_language</depend>
  <depend>cram_executive</depend>
  <depend>cram_designators</depend>
  <depend>cram_prolog</depend>
  <depend>cram_projection</depend>
  <depend>cram_occasions_events</depend>
  <depend>cram_utilities</depend>

  <depend>cram_common_failures</depend>
  <depend>cram_mobile_pick_place_plans</depend>
  <depend>cram_robot_interfaces</depend>
  <depend>cram_object_knowledge</depend>

  <depend>cram_physics_utils</depend>
  <depend>cl_bullet</depend>
  <depend>cram_bullet_reasoning</depend>
  <depend>cram_bullet_reasoning_belief_state</depend>
  <depend>cram_bullet_reasoning_utilities</depend>

  <depend>cram_robot_pose_gaussian_costmap</depend>
  <depend>cram_occupancy_grid_costmap</depend>
  <depend>cram_location_costmap</depend>
  <depend>cram_manipulation_interfaces</depend>

  <depend>cram_urdf_projection</depend>
  <depend>cram_lynxmotion_al5d_description</depend>
  <depend>cram_fetch_deliver_plans</depend>
  
  <!-- launch file -->
  <exec_depend>iai_maps</exec_depend>
  <exec_depend>iai_kitchen</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>lynxmotion_al5d_description</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
</package>
