<package format="2">
  <name>cram_lynxmotion_al5d_description</name>
  <version>0.7.0</version>
  <description>
    Prolog predicates describing the Lynxmotion AL5D robot arm
  </description>
  <author>Vinny Adjibi</author>
  <maintainer email="vadjibi@andrew.cmu.edu">Vinny Adjibi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cram_prolog</depend>
  <depend>cram_robot_interfaces</depend>
  <depend>cram_location_costmap</depend>
</package>
